# aws-sandbox

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/api/: Dockerfile  Makefile  README.md  pyproject.toml
backend/api/src/: main.py
src/: main.py  settings.py
ui/: .env.example  Makefile  README.md
ui/src/: index.html  index.js
