[tool.poetry]
name = "aws-sandbox"
version = "0.1.0"
description = "A sandbox repo to try out AWS."
authors = ["yar-jul"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "main.py", from = "src" }, { include = "settings.py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
